feat: working except there is no generated selectors

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "host_permissions": ["<all_urls>"],
   "action": {},
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   }
 }
